# digital-filters

./: .gitignore  README.md  prova.py  requirements.txt
src/: main.py
src/adaptive/adaptive_filter_window/: adaptive_filter_window.py  adaptive_filter_window_tapir.py
src/adaptive/adaptive_single_sample/: adaptive_array.py  adaptive_single_sample.py  test.py
src/adaptive/adaptive_single_sample/c/: CMakeLists.txt  adaptive_single_sample.c  adaptive_single_sample.h  main.c
src/adaptive/adaptive_single_sample_tapir/: adaptive_single_sample_tapir.py
src/adaptive/test/: adaptive_filter_reference.py  adaptive_filter_reference_tapir.py  test_adaptive_filter.py
src/fir/: README.md  main.py
src/fir/fir_array/: fir_array.py
src/fir/fir_single_sample/: fir_single_sample.py
src/fir_single_sample/: fir_single_sample.py
src/iir/: README.md  main.py
src/iir/iir_array/: iir_array.py
src/iir/iir_single_sample/: iir_single_sample.py
src/iir/iir_single_sample/c/: CMakeLists.txt  considered_ppg_patient_1.txt  iir_single_sample.c  iir_single_sample.h  main.c
src/iir/iir_window/: iir_window.py
src/iir/iir_window_array/: iir_window_array.py
src/iir/test/: coefficient.yaml  coefficient_2nd_order.yaml  coefficient_4th_order.yaml  input_signal.txt  test_iir_array.py
src/iir/test/butterworth_ppg/: butterworth_ppg_patient_6.txt
src/iir/test/considered_ppg/: considered_ppg_patient_10.txt  considered_ppg_patient_11.txt  considered_ppg_patient_12.txt  considered_ppg_patient_13.txt  considered_ppg_patient_14.txt  (+9 more)
src/iir/utils/: coefficient.py
